test/classes/nilability/demo2.good
demo2.chpl:11: error: Cannot default-initialize a: borrowed C
note: non-nil class types do not support default initialization
note: Consider using the type borrowed C? instead
